--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     align-items: center;
 }
 
+.hint {
+    color: rgb(139, 0, 0);
+}
+
 textarea {
     font-size: 22px;
     width: 70%;
@@ -27,10 +31,10 @@ textarea {
     margin: 30px auto;
     width: 90%;
     height: 400px;
-    background: #73768796;
+    background: #00000096;
     padding: 30px 80px;
-    border-radius: 10px;
-    border-bottom: 6px solid #999;
+    border-radius: 5px;
+    /* border-bottom: 6px solid #999; */
 }
 
 .key-row {
@@ -45,7 +49,7 @@ textarea {
 }
 
 .key {
-    background: #444;
+    background: rgb(112, 112, 112);
     color: #eee;
     border-radius: 4px;
     box-shadow: 0 1px 0 rgba(34, 34, 34, 0.433), inset 0 1px 3px rgba(255, 255, 255, 0.1);
